fix mobile word wrap

--- a/src/components/Terminal/Terminal.css
+++ b/src/components/Terminal/Terminal.css
@@ -298,6 +298,10 @@
 	.console {
 		padding: 1rem;
 	}
+
+	.console-line {
+		max-width: none;
+	}
 }
 
 @media (max-width: 480px) {
